# HELA

./: .gitignore  .rtd-environment.yml  .travis.yml  MANIFEST.in  README.md  README.rst  dataset.py  example.py  feature_importance.py  models.py  plot.py  requirements.txt  rfretrieval.py  setup.cfg  setup.py  testing.npy  utils.py  wpercentile.py
docs/: conf.py  index.rst
docs/hela/: api.rst  developer.rst  installation.rst  legacy.rst  tutorial.rst
example_dataset/: WASP12b.npy  error_bars.npy  example_dataset.json  wavelength.npy
hela/: __init__.py  dataset.py  feature_importance.py  forest.py  model.py  models.py  plot.py  posterior.py  posteriors.py  retrieval.py  utils.py  version.py  wpercentile.py  wrapper.py
hela/tests/: test_example.py
legacy/: README.md  dataset.py  models.py  rfretrieval.py  wpercentile.py
notebooks/: Atmospheric retrieval with Random Forests.ipynb
