[metadata]
name = hela
# version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
version = 0.0.dev
author = Pablo Márquez-Neila and Chloe Fisher
author_email = 
description = A Random Forest retrieval algorithm, here used to perform atmospheric retrieval on exoplanet atmospheres.
long_description = 
license = BSD 3-Clause
url = https://github.com/exoclime/HELA
edit_on_github = False
github_project = exoclime/HELA
python_requires = ">=3.5"

[options]
# install_requires should be formatted as a semicolon-separated list, e.g.:
install_requires = astropy; joblib; scikit-learn; matplotlib
zip_safe = False
use_2to3 = False

[options.package_data]
* = *.c
hela = data/*
hela.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[tool:pytest]
minversion = 3.0
norecursedirs = build docs/_build
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True

[flake8]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py

[pycodestyle]
exclude = extern,sphinx,*parsetab.py,astropy_helpers,ah_bootstrap.py,conftest.py,docs/conf.py,setup.py
